--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,17 +63,22 @@ p {
 }
 
 .loader {
-  border: 6px solid #ffffff;
-  border-top: 6px solid #db34c5;
+  display: block;
+  width: 48px;
+  height: 48px;
+  border: 4px solid #3f51b5;
+  border-bottom-color: transparent;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-  margin: 0 auto;
+  animation: rotation 1s linear infinite;
+  margin: 30px auto;
 }
 
-@keyframes spin {
-  to {
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
     transform: rotate(360deg);
   }
 }
